# AWS_c--_Sprint

MQTT/: appmain.c
basic_connection/: CMakeLists.txt  main.cpp
configuration_tests/: CMakeLists.txt  main.cpp
shadowSync/: CMakeLists.txt  main.cpp
